core compiles